--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,32 @@
     <h1>Easy Lasagna</h1>
     <img src="../images/lasagna.jpg" alt="">
 
-   
+    <!---->
+    <h2>Desciption</h2>
+    
+    <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!</p>
+    
+    <p>Making perfect homemade lasagna doesn’t have to be tedious. This top-rated easy lasagna recipe comes together quickly with a relatively short ingredient list. </p>
+
+    <!---->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Beef</li>
+        <li>Spaghetti sauce</li>
+        <li>Cheeses</li>
+        <li>Eggs</li>
+        <li>SeasoningsLasagna noodles</li>
+        <li>Water</li>
+    </ul>
+
+    <!---->
+    <h2>Steps</h2>
+    <ol>
+        <li>Cook and drain the ground beef, then stir in the spaghetti sauce and simmer. </li>
+        <li>Combine the cottage cheese, 2 cups of mozzarella, eggs, half of the Parmesan, and seasonings.</li>
+        <li>Assemble the lasagna according to the detailed recipe.</li>
+        <li>Bake, covered, for 45 minutes.</li> 
+        <li>ncover and continue baking for 10 minutes. </li>
+    </ol>
 </body>
 </html>
