--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Easy Lasagna</h1>
-    <img src="../images/lasagna.jpg" alt="">
+    <img src="../images/lasagna.png" alt="">
 
     <!---->
     <h2>Desciption</h2>
