--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/lasagna.html">Easy Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Easy Lasagna</a></li>
+        <li><a href="./recipes/brownies.html">Easy brownie</a></li>
+        <li><a href="./recipes/guacamole.html">Easy Guacamole</a></li>
+    </ul>
 </body>
 </html>
